syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcEvents";

package events;

service EventsGrpcService {
  rpc Read (ReadRequest) returns (stream Event);
  rpc Append(AppendRequest) returns(AppendResponse);
}

message ReadRequest {
  string streamId = 1;
  string streamType = 2;
  uint32 startPosition = 3;
  uint32 direction = 4;
}

message AppendRequest {
	string streamId = 1;
	string streamType = 2;
	repeated EventData events = 3;
	google.protobuf.Int32Value expectedVersion = 4;
}

message AppendResponse {	
	string streamId = 1;
	string streamType = 2;
	FailureResponse error = 3;
}

message FailureResponse {
	string message = 1;
	int32 code = 2;
}

message EventId {
	int64 timestamp = 1;
	int32 sequence = 2;
}

message EventData {
	string type = 1;
	bytes data = 2;
}

message Event {
	EventId id = 1;
	string type = 2;
	bytes data = 3;
}